--- a/_sass/components/others.sass
+++ b/_sass/components/others.sass
@@ -11,10 +11,6 @@
 .twitter-tweet
     margin: 10px auto
 
-.academic_page
-    margin: auto 
-    text-decoration: none
-
 .icon
     display: inline-block
     width: 17px
